Fix domain to resolve

--- a/edge/nginx.conf
+++ b/edge/nginx.conf
@@ -16,7 +16,7 @@ http {
   # create a global master which caches DNS answers according to upstream TTL
   init_by_lua_block {
     local err
-    hello_master, err = require("resolver.master"):new("dns_cache", "ddnsr-demo.com", {"172.20.0.2"})
+    hello_master, err = require("resolver.master"):new("dns_cache", "upstream.ddnsr-demo.com", {"172.20.0.2"})
     if not hello_master then
       error("failed to create hello resolver master: " .. err)
     end
