--- a/edge/nginx.conf
+++ b/edge/nginx.conf
@@ -72,6 +72,7 @@ http {
       proxy_http_version 1.1;
       proxy_set_header Connection "";
       proxy_set_header Host ddnsr-demo.com;
+      add_header  X-Upstream  $upstream_addr;
     }
   }
 }
