Improve code readability
Use variable names to better describe parameters.

--- a/edge/nginx.conf
+++ b/edge/nginx.conf
@@ -15,7 +15,9 @@ http {
   # create a global master which caches DNS answers according to upstream TTL
   init_by_lua_block {
     local err
-    hello_master, err = require("resolver.master"):new("dns_cache", "upstream.ddnsr-demo.com", {"172.20.0.2"})
+    local upstream_domain = "upstream.ddnsr-demo.com"
+    local dns_servers = {"172.20.0.2"}
+    hello_master, err = require("resolver.master"):new("dns_cache", upstream_domain, dns_servers)
     if not hello_master then
       error("failed to create hello resolver master: " .. err)
     end
@@ -34,13 +36,13 @@ http {
     server 0.0.0.1; # just an invalid address as a place holder
 
     balancer_by_lua_block {
-      local address, err = hello_client:get(true)
-      if not address then
-        ngx.log(ngx.ERR, "failed to lookup address for hello: ", err)
+      local upstream_address, err = hello_client:get(true)
+      if not upstream_address then
+        ngx.log(ngx.ERR, "failed to lookup upstream address for hello: ", err)
         return ngx.exit(500)
       end
 
-      local ok, err = require("ngx.balancer").set_current_peer(address, 80)
+      local ok, err = require("ngx.balancer").set_current_peer(upstream_address, 80)
       if not ok then
         ngx.log(ngx.ERR, "failed to set the current peer for hello: ", err)
         return ngx.exit(500)
@@ -55,8 +57,8 @@ http {
 
     location =/status {
       content_by_lua_block {
-        local address, err = hello_client:get()
-        if address then
+        local upstream_address, err = hello_client:get()
+        if upstream_address then
           ngx.say("OK")
         else
           ngx.say(err)
