Improve variable name
It is an IP.

--- a/edge/nginx.conf
+++ b/edge/nginx.conf
@@ -36,13 +36,13 @@ http {
     server 0.0.0.1; # just an invalid address as a place holder
 
     balancer_by_lua_block {
-      local upstream_address, err = hello_client:get(true)
-      if not upstream_address then
+      local upstream_address_ip, err = hello_client:get(true)
+      if not upstream_address_ip then
         ngx.log(ngx.ERR, "failed to lookup upstream address for hello: ", err)
         return ngx.exit(500)
       end
 
-      local ok, err = require("ngx.balancer").set_current_peer(upstream_address, 80)
+      local ok, err = require("ngx.balancer").set_current_peer(upstream_address_ip, 80)
       if not ok then
         ngx.log(ngx.ERR, "failed to set the current peer for hello: ", err)
         return ngx.exit(500)
