--- a/edge/Dockerfile
+++ b/edge/Dockerfile
@@ -2,7 +2,7 @@ FROM openresty/openresty:bionic
 
 RUN apt-get update \
   && apt-get install -y \
-    dnsutils git iputils-ping telnet \
+    dnsutils git iputils-ping tcpdump telnet \
   && mkdir /src \
   && cd /src \
   && git config --global url."https://".insteadOf git:// \
