Set edge to use HTTPS to connect to upstreams

--- a/edge/nginx.conf
+++ b/edge/nginx.conf
@@ -42,7 +42,7 @@ http {
         return ngx.exit(500)
       end
 
-      local ok, err = require("ngx.balancer").set_current_peer(upstream_address_ip, 80)
+      local ok, err = require("ngx.balancer").set_current_peer(upstream_address_ip, 443)
       if not ok then
         ngx.log(ngx.ERR, "failed to set the current peer for hello: ", err)
         return ngx.exit(500)
@@ -68,7 +68,7 @@ http {
     }
 
     location / {
-      proxy_pass http://hello_backend/;
+      proxy_pass https://hello_backend/;
       proxy_pass_header Server;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
