Add wrapper to improve code readability

--- a/edge/nginx.conf
+++ b/edge/nginx.conf
@@ -7,44 +7,32 @@ error_log stderr;
 http {
   access_log /dev/stdout;
 
-  lua_package_path "/usr/local/openresty/lualib/?.lua;/usr/local/openresty/luajit/share/lua/5.1/?.lua;/lua/src/lua-resty-resolver/lib/?.lua;;";
+  lua_package_path "/usr/local/openresty/lualib/?.lua;/usr/local/openresty/luajit/share/lua/5.1/?.lua;/lua/src/?.lua;/lua/src/lua-resty-resolver/lib/?.lua;;";
   lua_package_cpath "/usr/local/openresty/lualib/?.so;/usr/local/openresty/luajit/lib/lua/5.1/?.so;";
 
   lua_shared_dict dns_cache 1m;
 
   # create a global master which caches DNS answers according to upstream TTL
   init_by_lua_block {
-    local err
-    local upstream_domain = "upstream.ddnsr-demo.com"
-    local dns_servers = {"172.20.0.2"}
-    hello_master, err = require("resolver.master"):new("dns_cache", upstream_domain, dns_servers)
-    if not hello_master then
-      error("failed to create hello resolver master: " .. err)
-    end
+    dns_resolver = require 'dns_resolver'
+    master_dns = dns_resolver.new_master{
+      cache="dns_cache", upstream_domain = "upstream.ddnsr-demo.com", dns_servers = {"172.20.0.2"}
+    }
   }
 
   init_worker_by_lua_block {
-    hello_master:init() -- master `init` must be called from a worker since it uses `ngx.timer.at`, it is ok to call multiple times
-    local err
-    hello_client, err = hello_master:client()
-    if not hello_client then
-        error("failed to create hello resolver client: " .. err)
-    end
+    client_dns = dns_resolver.new_client(master_dns)
   }
 
   upstream hello_backend {
     server 0.0.0.1; # just an invalid address as a place holder
 
     balancer_by_lua_block {
-      local upstream_address_ip, err = hello_client:get(true)
-      if not upstream_address_ip then
-        ngx.log(ngx.ERR, "failed to lookup upstream address for hello: ", err)
-        return ngx.exit(500)
-      end
-
-      local ok, err = require("ngx.balancer").set_current_peer(upstream_address_ip, 443)
+      local ok, err = dns_resolver.set_address(
+        client_dns, {exp_fallback_ok = true, port = "443"}
+      )
       if not ok then
-        ngx.log(ngx.ERR, "failed to set the current peer for hello: ", err)
+        ngx.log(ngx.ERR, "failed to set upstream address: ", err)
         return ngx.exit(500)
       end
     }
