Use variables to define upstream to be used

--- a/edge/nginx.conf
+++ b/edge/nginx.conf
@@ -24,6 +24,10 @@ http {
     client_dns = dns_resolver.new_client(master_dns)
   }
 
+  upstream local_backend {
+    server 127.0.0.1:8081;
+  }
+
   upstream hello_backend {
     server 0.0.0.1; # just an invalid address as a place holder
 
@@ -56,12 +60,33 @@ http {
     }
 
     location / {
-      proxy_pass https://hello_backend/;
+      set $upstream '';
+
+      -- choose upstream depending on a variable
+      set_by_lua_block $upstream {
+        if ngx.var.arg_backend == "hello" then
+          return "https://hello_backend"
+        else
+          return "http://local_backend"
+        end
+      }
+
+      proxy_pass $upstream;
       proxy_pass_header Server;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
       proxy_set_header Host ddnsr-demo.com;
       add_header  X-Upstream  $upstream_addr;
+    }
+  }
+
+  server {
+    listen 8081;
+
+    location / {
+      content_by_lua_block {
+        ngx.say("OK")
+      }
     }
   }
 }
