Fix comment location

--- a/edge/nginx.conf
+++ b/edge/nginx.conf
@@ -62,7 +62,7 @@ http {
     location / {
       set $upstream '';
 
-      -- choose upstream depending on a variable
+      # choose upstream depending on a variable
       set_by_lua_block $upstream {
         if ngx.var.arg_backend == "hello" then
           return "https://hello_backend"
