Demonstrate NGINX not resolving DNS again

--- a/edge/nginx.conf
+++ b/edge/nginx.conf
@@ -7,6 +7,8 @@ error_log stderr;
 http {
   access_log /dev/stdout;
 
+  resolver 172.20.0.2 local=/etc/resolv.conf;
+
   lua_package_path "/usr/local/openresty/lualib/?.lua;/usr/local/openresty/luajit/share/lua/5.1/?.lua;/lua/src/?.lua;/lua/src/lua-resty-resolver/lib/?.lua;;";
   lua_package_cpath "/usr/local/openresty/lualib/?.so;/usr/local/openresty/luajit/lib/lua/5.1/?.so;";
 
@@ -16,16 +18,12 @@ http {
   init_by_lua_block {
     dns_resolver = require 'dns_resolver'
     master_dns = dns_resolver.new_master{
-      cache="dns_cache", upstream_domain = "upstream.ddnsr-demo.com", dns_servers = {"172.20.0.2"}
+      cache = "dns_cache", upstream_domain = "upstream.ddnsr-demo.com", dns_servers = {"172.20.0.2"}
     }
   }
 
   init_worker_by_lua_block {
     client_dns = dns_resolver.new_client(master_dns)
-  }
-
-  upstream local_backend {
-    server 127.0.0.1:8081;
   }
 
   upstream hello_backend {
@@ -42,6 +40,10 @@ http {
     }
 
     keepalive 10; # connection pool MUST come after balancer_by_lua_block
+  }
+
+  upstream hello_not_resolved_backend {
+    server upstream.ddnsr-demo.com:443;
   }
 
   server {
@@ -64,10 +66,10 @@ http {
 
       # choose upstream depending on a variable
       set_by_lua_block $upstream {
-        if ngx.var.arg_backend == "hello" then
+        if ngx.var.arg_backend == "resolved" then
           return "https://hello_backend"
         else
-          return "http://local_backend"
+          return "https://hello_not_resolved_backend"
         end
       }
 
@@ -75,18 +77,8 @@ http {
       proxy_pass_header Server;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
-      proxy_set_header Host ddnsr-demo.com;
+      proxy_set_header Host upstream.ddnsr-demo.com;
       add_header  X-Upstream  $upstream_addr;
-    }
-  }
-
-  server {
-    listen 8081;
-
-    location / {
-      content_by_lua_block {
-        ngx.say("OK")
-      }
     }
   }
 }
