Fix DNS client var

--- a/edge/nginx.conf
+++ b/edge/nginx.conf
@@ -51,7 +51,7 @@ http {
 
     location =/status {
       content_by_lua_block {
-        local upstream_address, err = hello_client:get()
+        local upstream_address, err = client_dns:get()
         if upstream_address then
           ngx.say("OK")
         else
