Fix status code set

--- a/edge/nginx.conf
+++ b/edge/nginx.conf
@@ -55,8 +55,8 @@ http {
         if upstream_address then
           ngx.say("OK")
         else
+          ngx.status = ngx.HTTP_SERVICE_UNAVAILABLE
           ngx.say(err)
-          ngx.exit(ngx.HTTP_SERVICE_UNAVAILABLE)
         end
       }
     }
